# singleton

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
src/: singleton.py  test_singleton.py
src/singleton/: __init__.py
tests/: test_singleton.py
