# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = singleton
version = attr: singleton.__version__
description = Simple python singleton metaclass.
long_description = file: README.md
long_description_content_type = text/markdown
author = syntapy
author_email = syntapy@gmail.com
# maintainer =
# maintainer_email =
license = BSD-3-Clause
license_file = LICENSE
# license_files = LICENSES/*
url = https://github.com/syntapy/singleton
download_url = https://github.com/syntapy/singleton
project_urls =
    Documentation = https://github.com/syntapy/singleton#readme
    Issue Tracker = https://github.com/syntapy/singleton/issues
    Source Code = https://github.com/syntapy/singleton
keywords = design pattern, singleton, metaclass
sclassifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
platforms = any

[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
py_modules =
    singleton
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
tests =
  pytest
  pytest-cov

code =
  flake8
